Update about.html with extra information

--- a/templates/about.html
+++ b/templates/about.html
@@ -156,13 +156,10 @@
     <h2>Impact</h2>
     <p>The Lumbar Spine Degeneration project is a step toward enhancing diagnostic accuracy in spinal health. With deep learning-driven insights, the system has the potential to support faster, more consistent clinical decisions and contribute to better spine care worldwide.</p>
     <h2>About the Developer</h2>
-    <p><strong>Kuldeep Singh Tak</strong> is a B.Tech student specializing in Computer Science (AI) at Poornima Institute of Engineering and Technology, Jaipur. With a solid foundation in Python, TensorFlow, and deep learning frameworks, he has hands-on experience in building AI-driven healthcare solutions.</p>
-    <p>Kuldeep is passionate about leveraging AI for social good and has actively participated in state-level hackathons and interdisciplinary workshops to enhance his technical acumen. He is also a certified professional in Data Analysis with Python and Supervised Machine Learning Algorithms.</p>
+    <p><strong>Ajay Singh Rajawat</strong> is a B.Tech student specializing in Computer Science at Poornima Institute of Engineering and Technology, Jaipur. With a solid foundation in Python, TensorFlow, and deep learning frameworks, he has hands-on experience in building AI-driven healthcare solutions.</p>
+    <p>Ajay and team is passionate about leveraging AI for social good and has actively participated in state-level hackathons and interdisciplinary workshops to enhance his technical acumen. He is also a certified professional in Data Analysis with Python and Supervised Machine Learning Algorithms.</p>
     <p>In this project, his motivation stems from a commitment to improving healthcare outcomes through innovative AI
       solutions.
-      Learn more about Kuldeep's work on his <a class="social-links"
-        href="https://www.linkedin.com/in/kuldeep-singh-tak-16037b226/" target="_blank">LinkedIn</a>
-      and <a class="social-links" href="https://github.com/Itzkuldeep" target="_blank">GitHub</a>.</p>
   </div>
 </body>
 {% include 'footer.html' %}
